# mo2-linux-helper

./: .SRCINFO  .gitignore  AUR-SUBMISSION-GUIDE.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  index.html  mo2-linux-helper-v2.jsx  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game_profile.md
.github/workflows/: aur-publish.yml  build.yml
assets/: com.modorganizer.MO2LinuxHelper.desktop
aur/: PKGBUILD
backend-scripts/: com.modorganizer.MO2LinuxHelper.yml  mo2-flatpak-setup.sh  mo2-nxm.sh  mo2-setup.sh  mo2-shortcut.py
scripts/: mo2-flatpak-setup.sh  mo2-nxm.sh  mo2-setup.sh  mo2-shortcut.py
src/: App.css  App.jsx  UpdatesPanel.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  updater.rs
src-tauri/src/commands/: deps.rs  mod.rs  nxm.rs  setup.rs  shortcuts.rs  system.rs  update.rs
src-tauri/src/utils/: mod.rs  system.rs
src/pages/: BackendScripts.jsx  Dashboard.jsx  Dependencies.jsx  FlatpakConfig.jsx  GameFixes.jsx  NXMLinks.jsx  NativePlugins.jsx  NonSteamShortcuts.jsx  PortableInstances.jsx  SetupWizard.jsx
