[package]
name = "mo2-linux-helper"
version = "2.0.0"
description = "Automated Mod Organizer 2 setup tool for Arch Linux with Proton"
authors = ["MO2 Linux Helper Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/mo2-linux-helper"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mo2_linux_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "shell-execute",
  "shell-open",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-copy-file",
  "fs-create-dir",
  "fs-exists",
  "path-all",
  "http-request",
  "notification-all",
  "dialog-open",
  "dialog-save",
  "updater",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5"
glob = "0.3"
regex = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
