[package]
name = "mo2-linux-helper"
version = "2.0.0"
description = "MO2 Linux Helper — Proton/Wine configuration tool for Mod Organizer 2"
authors = ["MO2 Linux Helper Contributors"]
license = "GPL-3.0"
repository = "https://github.com/Crowdrocker/mo2-linux-helper"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "6"
dirs = "5"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
